src/test/deca/context/invalid/created/call_not_allow_protected/protected_fields_call_method.deca
// Description:
// 		Appel d'un champ protege dans une classe non fille
// Resultats:
//		Erreur contexte Ligne 14 : Contextual error with an expression of type 'instance.field' ... 3.66

class A {
	protected int x;
}

class B {
    A a;
	int getX()
	{
		return(a.x);
	}
}


{

}
